--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,9 @@ body {
   position: relative;
   min-height: 100dvh;
   min-height: 100vh;
+}
+
+.main-nav-item {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 51px 1fr auto;
@@ -55,8 +58,7 @@ body {
 section {
   max-width: 100vw;
   min-height: auto;
-  padding-top: 51px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .red-button {
@@ -252,16 +254,15 @@ aside {
 
 
 .section-title{
-  text-align:center;
-  font-size: 36px;
-  font-weight:800;
-  padding: 10px 0;
-  margin: 0px calc(2vw + 20px);
+  line-height: 1.5;
+  font-size: clamp(21.6px, calc(1.6vw + 4.32px), 36px);
+  font-weight: 800;
 }
+
 
 @media(max-width: 900px) {
   .section-title {
-    font-size: clamp(12px, 5vw, 36px)
+    font-size: clamp(12px, 5vw, 32.4px)
   }
 }
 
@@ -284,14 +285,14 @@ aside {
   }
 }
 
-
-
-
-/* ----- HERO ----- */
-.hero {
-  position: relative;
+.fill-viewport {
   height: 100vh;
   height: 100svh;
+}
+
+/* ----- HERO ----- */
+#hero {
+  position: relative;
   display: flex;
   padding: var(--nav-height), 0;
   background: linear-gradient(rgba(var(--rgb-black),.6), rgba(var(--rgb-black),.6)), url('assets/hero-bg.png') center 35%/cover no-repeat;
@@ -301,6 +302,7 @@ aside {
   border-bottom-right-radius: 14px;
   justify-content: center;
   align-items: center;
+  height: fit-content;
 }
 
 .hero-content {
@@ -408,7 +410,6 @@ aside {
     font-size: clamp(20px, calc(4vw + 2px), 26px);
     border-width: clamp(2.4px, calc(2px + .15vw), 3px);
     border-radius: calc(1.1vw + 5px);
-
   }
 
   .hero-phone {
@@ -441,48 +442,67 @@ aside {
 
 
 
-
-
-
 /* ----- ABOUT ----- */
-.about {
-  padding: var(--nav-height) 0px;
-  background-color: var(--text-secondary);
-  height: 100vh;
-  height: 100svh;
-  overflow: hidden;
+
+#about {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(9.60px, calc(0.80vw + 0.66px), 16px);
+  padding-top: clamp(12.00px, calc(0.90vw + 2.81px), 20px);
+  scroll-margin-top: 51px;
 }
 
 .about-content {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: clamp(21.60px, calc(1.70vw + 3.46px), 36px);
 }
 
-.about-overview {
+.about-content > div {
   flex: 1;
+  align-items: center;
+}
+
+/* first-row */
+.about-first-row {
+  grid-template-columns: clamp(229.00px, calc(28.60vw + -93.97px), 458px) 1fr;
+  gap: clamp(54.00px, calc(4.70vw + -0.25px), 90px);
   display: grid;
-  grid-template-columns: 458px 1fr;
-  gap: 40px;
+  padding: 0 clamp(25px, calc(2.8vw - 5.44px), 50px);
+  height: 500px;
 }
 
 .value-prop{
   font-weight: 800;
-  font-size: 48px;
+  font-size: clamp(24.00px, calc(2.80vw + -5.94px), 48px);
   align-self: center;
 }
-.value-prop strong{ color:var(--accent-primary); }
+.value-prop strong { color:var(--accent-primary); }
 
-.about-specifics * {
+.about-astar * {
   text-align: start;
-  font-size: 20px;
 }
 
-.about-specifics h3 {
-  padding: 10px 0;
-  font-size: 32px;
-  font-weight: 800;
-  color: white;;
+.px-20 {
+  font-size: clamp(12.00px, calc(1.00vw + 0.82px), 20px);
+}
+
+.font-weight-300 {
+  font-weight: 300;
+}
+
+.px-36 {
+  font-size: clamp(21.6px, calc(1.7vw + 2.34px), 36px);
+}
+
+.px-30 {
+  font-size: clamp(18.00px, calc(1.40vw + 3.22px), 30px);
+}
+
+.about-astar h2 {
+  line-height: 1.8;
+  color: white;
   text-shadow: 
     -1px -1px 0 var(--accent-primary),
      1px -1px 0 var(--accent-primary),
@@ -490,117 +510,117 @@ aside {
      1px  1px 0 var(--accent-primary);
 }
 
-.about-details {
+.about-astar span{
+  font-weight: 700;
+}
+
+/* second-row */
+.about-second-row {
   flex: 1;
   display: flex;
-  justify-content: center;
   background-color: var(--accent-primary);
   color: var(--text-secondary);
+  justify-content: center;
+  align-items: center;
 }
 
-.about-details h3 {
-  font-size: 32px;
-  font-weight: 800;
+.about-second-row > div {
+  display: flex;
+  width: clamp(530.5px, calc(44.2vw + 219px), 1061px); 
+  gap: clamp(98px, calc(10.2vw + .17px), 196px);
+  height: 100%;
+  padding: clamp(4.80px, calc(0.40vw + 0.33px), 8px) 0 clamp(18.00px, calc(1.40vw + 3.22px), 30px); 0;
 }
 
-.about-details * {
-  font-size: 20px;
+.px-24 {
+  font-size: clamp(14px, calc(1vw + 4.85px), 24px);
+}
+
+.px-16 {
+  font-size: clamp(11.2px, calc(.7vw + 2.64px), 16px);
+}
+
+.second-row-item {
   flex: 1;
-}
-
-
-.office-hours {
-  text-align: center;
-  width: 1px;
   display: flex;
   flex-direction: column;
-  align-items: end;
+  gap: clamp(18.00px, calc(.014vw + 3.22px), 30px);
+}
+
+.h-32-700 {
+  font-size: clamp(22.4px, calc(1.3vw + 7.26px), 32px);
+  font-weight: 700;
 }
 
 .hours-list {
-  padding: 30px 0;
   display: grid;
   grid-template-columns: max-content max-content;
-  gap: 10px 120px;
+  gap: clamp(6px, calc(.3vw + 4.37px), 10px) clamp(30px, calc(2.1vw + 9.98px), 50px);
+  justify-content: center;
 }
 
 .hours-list * {
   text-align: start;
-  width: auto;
 }
 
 .kicker {
-  font-size: 16px;
-  color: var(--accent-primary);
+  font-size: clamp(9.8px, calc(.6vw + 2.56px), 14px); 
+  color: rgba(247, 250, 76, 0.8);
 }
 
-.about-actions a {
+.programs-and-classes-content {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(12px, calc(.6vw + 8.74px), 20px);
+}
+
+.about-actions {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(6px, calc(.3vw + 4.37px), 10px);
+}
+
+.about-actions * {
   display: inline-block;
 }
 
-/* mobile responsiveness */
-@media (max-width: 900px) {
-
-.about-content {
-  grid-template-rows: auto auto;
-  gap: 20px;
-  padding: 0 calc(6vw + 12px);
+.price-list {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(12px, calc(.6vw + 8.74px), 20px);
 }
 
-.about-overview {
-  padding-top: 20px;
-  display: grid;
-  grid-template-rows: auto auto;
-  grid-template-columns: unset;
-  gap: 30px;
+.btn-black-24px-700 {
+  background-color: var(--text-primary);
+  color: var(--text-secondary);
+  font-weight: 500;
 }
 
-.value-prop{
-  font-size: calc(2.5vw + 10px);
-  width: 80%;
-  margin: 0 auto; 
+.padding-8-20 {
+  padding: clamp(4.8px, calc(.3vw + 2.31px), 8px) clamp(12px, calc(.6vw + 8.74px), 20px);
 }
 
-.about-specifics * {
-  font-size: clamp(14px, 3vw, 20px)
+.border-radius-10 {
+  border-radius: 10px;
 }
 
-.about-specifics h3 {
-  font-size: clamp(20px, 4vw, 32px);
+.about-phone {
+  color: var(--text-secondary);
+  text-decoration: underline;
+  font-weight: 700;
+  text-shadow: 0 0 .5px var(--text-secondary), 0 0 .5px var(--text-secondary), 0 0 1px var(--text-secondary);
+  text-underline-offset: 4px;
 }
 
-.about-details {
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 10px;
+.about-subtext {
+  margin: 0 8px;
 }
 
-.about-details h3 {
-  font-size: clamp(20px, 5vw, 32px);
+.btn-check-availability {
+  background-color: var(--accent-secondary);
+  padding: clamp(4.80px, calc(0.20vw + 4.29px), 8px) clamp(12.00px, calc(1.00vw + 0.82px), 20px);
+  border-radius: clamp(6.00px, calc(0.30vw + 4.37px), 10px);
 }
-
-.about-details * {
-  font-size: 3vw;
-}
-
-
-.office-hours {
-  text-align: center;
-}
-
-.hours-list {
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 4px 10px;
-  margin-inline: auto;
-}
-
-
-.kicker {
-  font-size: 8px;
-}
-}
-
 
 /* SERVICES Section */
 
@@ -1257,7 +1277,7 @@ form img {
   top: 0;
 }
 
-.uoc-body {
+#uoc-body {
   height: fit-content;
   margin: 0;
 }
