--- a/styles.css
+++ b/styles.css
@@ -493,6 +493,10 @@ aside {
   font-weight: 300;
 }
 
+.fw-600 {
+  font-weight: 600;
+}
+
 .px-36 {
   font-size: clamp(21.6px, calc(1.7vw + 2.34px), 36px);
 }
@@ -618,8 +622,8 @@ aside {
 
 #services {
   background-color: var(--accent-tertiary);
-  padding: clamp(33.00px, calc(2.60vw + 5.24px), 55px) clamp(42.00px, calc(3.30vw + 6.85px), 70px) clamp(48.00px, calc(3.70vw + 9.24px), 80px) clamp(45.00px, calc(3.50vw + 8.04px), 75px);
-  gap: clamp(27.00px, calc(2.10vw + 4.83px), 45px);
+  padding: clamp(48.00px, calc(3.70vw + 9.24px), 80px) clamp(54.00px, calc(4.20vw + 9.65px), 90px) clamp(60.00px, calc(4.70vw + 10.07px), 100px) clamp(54.00px, calc(4.20vw + 9.65px), 90px);
+  gap: clamp(30.00px, calc(2.30vw + 6.02px), 50px);
 }
 
 .services-list {
@@ -645,31 +649,31 @@ aside {
 }
 
 /* INSTRUCTORS Section */
-.instructors {
+#instructors {
   background: linear-gradient(rgba(var(--rgb-black),.6), rgba(var(--rgb-black),.6)), url('assets/instructor-bg.jpg') center 35%/cover no-repeat;
-  padding-right: 30px;
-  padding-left: 30px;
-  position: relative;
+  padding: clamp(48.00px, calc(3.70vw + 9.24px), 80px) 0 clamp(60.00px, calc(4.70vw + 10.07px), 100px) 0;
+  gap: clamp(27.00px, calc(2.10vw + 4.83px), 45px);
+  background-position: center 75%;
 }
 
-.instructors h2 {
+#instructors h2 {
   color: var(--text-secondary);
 }
 
 
 .instructors-list {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  gap: 42px;
+  display: flex;
+  gap: clamp(25.20px, calc(2.00vw + 3.71px), 42px);
   align-items: center;
   justify-content: center;
 }
 
 .instructors-card {
-  height: fit-content;
+  height: clamp(270.00px, calc(21.10vw + 46.28px), 450px);
+  width: clamp(201.00px, calc(15.70vw + 34.61px), 335px);
   background-color: var(--accent-tertiary);
-  padding: 30px 20px;
-  border-radius: 20px;
+  padding: clamp(33.00px, calc(2.60vw + 5.24px), 55px) 0 clamp(33.00px, calc(2.60vw + 5.24px), 55px) 0;
+  border-radius: clamp(12.00px, calc(0.60vw + 8.74px), 20px);
   display: grid;
   grid-template-areas:
     "instructors-img"
@@ -677,14 +681,14 @@ aside {
     "instructors-name"
     "."
     "instructors-role";
-  grid-template-rows: auto 50px auto 5px auto;
+  grid-template-rows: auto clamp(30.00px, calc(2.30vw + 6.02px), 50px) auto clamp(3.00px, calc(0.20vw + 1.20px), 5px) auto;
   align-items: center;
   justify-content: center;
 }
 
 .instructors-img {
-  height: 237px;
-  width: 237px;
+  height: clamp(142.20px, calc(11.10vw + 24.63px), 237px);
+  width: clamp(142.20px, calc(11.10vw + 24.63px), 237px);
   object-fit: cover;
   object-position: center;
   border-radius: 50%;
@@ -700,33 +704,137 @@ aside {
 
 /* REVIEWS section */
 
-.reviews {
+/* .reviews {
   display: grid;
   grid-template-rows: auto 1fr;
+  padding: 80px 0;
+}
+
+.reviews-carousel {
+  place-self: center;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 80px;
+}
+
+.reviews-carousel > button > img {
+  height: 47px;
 }
 
 .reviews-card {
-  place-self: center;
-  background-color: var(--text-secondary);
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
   width: 937px;
   height: 455px;
+  background-color: var(--text-secondary);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
   border-radius: 21px;
+  align-items: center;
+}
+
+.reviews-slides {
+  display: flex;
+  width: 80%;
+}
+
+
+.reviews-card > div {
+  width: 100%;
 }
 
 .reviews-card hr {
   height: 1px;
   background-color: var(--text-primary);
+  margin: 16px 0;
 }
 
 .reviews-card h4 {
-  font-size: 32px;
   font-weight: 500;
 }
 
 .reviews-card img {
   width: 266.35px;
   height: 124px;
+} */
+
+.reviews {
+  padding: clamp(48.00px, calc(3.70vw + 9.24px), 80px) 0;
+  gap: clamp(18.00px, calc(1.40vw + 3.22px), 30px);
+}
+
+.reviews-carousel {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: fit-content;
+  padding: 0 clamp(20.00px, calc(2.90vw + -5.86px), 50px);
+}
+
+.reviews-slides {
+  display: flex;
+  flex: 1;
+  height: clamp(273.00px, calc(21.30vw + 47.48px), 455px);
+}
+
+.reviews-card {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform-style: preserve-3d;
+  width: clamp(374.80px, calc(46.40vw + 47.56px), 937px);
+  height: clamp(182.00px, calc(22.50vw + 23.72px), 455px);
+  background-color: var(--text-secondary);
+  border-radius: clamp(12.60px, calc(0.70vw + 7.80px), 21px);
+  box-shadow: 0 8px 25px rgba(0,0,0,0.3);
+  padding: clamp(24.00px, calc(1.90vw + 3.63px), 40px);
+  transition: all .5s ease;
+  transform: translateX(-50%) scale(1);
+  padding: clamp(36.00px, calc(2.80vw + 6.43px), 60px) clamp(36.00px, calc(2.80vw + 6.43px), 60px) clamp(12.00px, calc(0.90vw + 2.81px), 20px) clamp(36.00px, calc(2.80vw + 6.43px), 60px);
+  justify-content: space-between;
+}
+
+.reviews-card hr {
+  height: 1px;
+  background-color: var(--text-primary);
+  margin: clamp(9.60px, calc(0.70vw + 2.64px), 16px) 0;
+}
+
+.reviews-card img {
+  height: clamp(74.40px, calc(5.80vw + 13.04px), 124px);
+} 
+.reviews-card.active {
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
+}
+
+.reviews-card.prev {
+  transform: translateX(calc(-60% + -16.4vw)) scale(0.8);
+  z-index: 2;
+}
+
+.reviews-card.next {
+  transform: translateX(calc(-40% + 16.4vw)) scale(0.8);
+}
+
+.reviews-card.hidden-left {
+  transform: translateX(-140%) scale(0.4);
+  pointer-events: none;
+  opacity: 0;
+}
+
+.reviews-card.hidden-right {
+  transform: translateX(40%) scale(0.4);
+  z-index: 1;
+  pointer-events: none;
+  opacity: 0;
+}
+
+
+.reviews-carousel > button > img {
+  height: clamp(18.80px, calc(2.40vw + 0.95px), 47px);
+}
+.reviews-carousel > button {
+  cursor: pointer;
 }
 
 
